// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/components/atoms/Card stories Sample matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          Sample Card
        </h2>
        <div
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories Sized matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          Sample Card
        </h2>
        <div
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories WithBoth matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <img
        alt="sample"
        src="https://picsum.photos/600/400"
        width="400"
      />
      <div
        class="body"
      >
        <h2
          class="title"
        >
          Sample Card
        </h2>
        <div
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
      </div>
      <button
        class="button"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories WithButton matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <div
        class="body"
      >
        <h2
          class="title"
        >
          Sample Card
        </h2>
        <div
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
      </div>
      <button
        class="button"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`app/components/atoms/Card stories WithImage matches markup snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    style="width: 400px;"
  >
    <div
      class="card"
    >
      <img
        alt="sample"
        src="https://picsum.photos/600/400"
        width="400"
      />
      <div
        class="body"
      >
        <h2
          class="title"
        >
          Sample Card
        </h2>
        <div
          class="content"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
